[gd_scene load_steps=2 format=3 uid="uid://quest_ui_scene"]

[ext_resource type="Script" path="res://QuestUI.gd" id="1"]

[node name="QuestUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.2, 0.25, 0.95)

[node name="TopBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="GemsContainer" type="HBoxContainer" parent="TopBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -25.0
offset_right = 250.0
offset_bottom = 25.0
grow_vertical = 2

[node name="GemsIcon" type="TextureRect" parent="TopBar/GemsContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="GemsButton" type="Button" parent="TopBar/GemsContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Gems: 0 (+)"

[node name="StaminaContainer" type="HBoxContainer" parent="TopBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -25.0
offset_right = -20.0
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
alignment = 2

[node name="StaminaLabel" type="Label" parent="TopBar/StaminaContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Stamina 91/100"
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="TopBar/StaminaContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 14
text = "(00:26 Left)"
vertical_alignment = 1

[node name="RefillButton" type="Button" parent="TopBar/StaminaContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "+"

[node name="MainContent" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sidebar" type="Panel" parent="MainContent"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 200.0
grow_vertical = 2

[node name="SidebarContent" type="VBoxContainer" parent="MainContent/Sidebar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuestsTitle" type="Label" parent="MainContent/Sidebar/SidebarContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Quests"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MainContent/Sidebar/SidebarContent"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="StoryButton" type="Button" parent="MainContent/Sidebar/SidebarContent"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Story"

[node name="BoostsButton" type="Button" parent="MainContent/Sidebar/SidebarContent"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Boosts"

[node name="EventsButton" type="Button" parent="MainContent/Sidebar/SidebarContent"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Events"

[node name="TabContainer" type="Control" parent="MainContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Story" type="Control" parent="MainContent/TabContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChapterBar" type="Panel" parent="MainContent/TabContainer/Story"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="ChapterButtons" type="HBoxContainer" parent="MainContent/TabContainer/Story/ChapterBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="EpisodesScroll" type="ScrollContainer" parent="MainContent/TabContainer/Story"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
offset_left = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="EpisodesVBox" type="VBoxContainer" parent="MainContent/TabContainer/Story/EpisodesScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Boosts" type="Control" parent="MainContent/TabContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainContent/TabContainer/Boosts"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -15.0
offset_right = 100.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Coming Soon"
horizontal_alignment = 1

[node name="Events" type="Control" parent="MainContent/TabContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainContent/TabContainer/Events"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -15.0
offset_right = 100.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Coming Soon"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "Back"
